Update 'ij60w8x7g-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:e4cb6c95130c521dd4520f723405d03c660c3833@sha256:8315a72fa6642ac2154df6f854907f170cb26d8c36ffd5a0acc1ccd8f384bea8

--- a/components/ij60w8x7g-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/ij60w8x7g-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ij60w8x7g-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:e4cb6c95130c521dd4520f723405d03c660c3833@sha256:8315a72fa6642ac2154df6f854907f170cb26d8c36ffd5a0acc1ccd8f384bea8
+          name: container-image
